Code review.
git-svn-id: svn://svn.berlios.de/jsontools/trunk/jsontools-core@102 5ee35f29-4713-0410-8bc3-af33b2071d23